--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
+    "react-native-background-fetch": "^3.1.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-push-notification": "^6.1.3",
     "react-native-reanimated": "~1.13.0",
