--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
     "react-native-background-fetch": "^3.1.0",
+    "react-native-background-task": "^0.2.1",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-push-notification": "^6.1.3",
     "react-native-reanimated": "~1.13.0",
@@ -28,6 +29,7 @@
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
+    "jetifier": "^1.6.6",
     "react-test-renderer": "~16.13.1"
   },
   "jest": {
